order-form-v1.2/force-app/main/default/objects/Order_Form_Terms_Config__mdt/Order_Form_Terms_Config__mdt.object-meta.xml
<CustomObject>
    <description>Which General Subscription Terms of Business an Order Form references. The deal owner's role name is matched against Role_Pattern__c (CONTAINS); the record flagged Is_Default__c applies when nothing matches. Adding a team = adding a record.</description>
    <label>Order Form Terms Config</label>
    <pluralLabel>Order Form Terms Configs</pluralLabel>
</CustomObject>