order-form-v1.2/force-app/main/default/objects/Order_Form_Terms_Config__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <description>Applies when no Role_Pattern__c matches. Exactly one record should be default.</description>
    <label>Is Default</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>

</CustomField>