order-form-v1.2/force-app/main/default/objects/Order_Form_Terms_Config__mdt/fields/Role_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Role_Pattern__c</fullName>
    <description>Substring matched (CONTAINS) against the opportunity owner's role name, e.g. "Global Enterprise Solutions &amp; Memberships". Blank on the default record.</description>
    <label>Role Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>