order-form-v1.2/force-app/main/default/objects/Order_Form_Terms_Config__mdt/fields/Terms_Label__c.field-meta.xml
<CustomField>
    <fullName>Terms_Label__c</fullName>
    <description>Document name printed in the Order Form intro, e.g. "General Subscription Terms of Business (Key Account)".</description>
    <label>Terms Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>