order-form-v1.2/force-app/main/default/objects/Order_Form_Terms_Config__mdt/fields/Terms_URL__c.field-meta.xml
<CustomField>
    <fullName>Terms_URL__c</fullName>
    <description>Public URL of the terms page printed in the Order Form intro.</description>
    <label>Terms URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>